fix: tsconfig and babel configuration

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,5 +9,7 @@
     "sourceType": "module"
   },
   "plugins": ["react", "react-native"],
-  "rules": {}
+  "rules": {
+    "react/react-in-jsx-scope": "off"
+  }
 }
