--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,3 @@
 {
-  "extends": "@tsconfig/react-native/tsconfig.json",
-  "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "*": ["src/*"],
-      "tests": ["tests/*"],
-      "@/*": ["src/*"]
-    }
-  }
+  "extends": "@tsconfig/react-native/tsconfig.json"
 }
