--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-safe-area-context": "^4.7.4",
-    "react-native-screens": "^3.27.0"
+    "react-native-screens": "^3.27.0",
+    "react-native-vector-icons": "^10.0.1",
+    "styled-components": "^6.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -26,7 +28,9 @@
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/react-native": "^12.3.1",
     "@tsconfig/react-native": "^3.0.0",
+    "@types/jest": "^29.5.6",
     "@types/react": "^18.0.24",
+    "@types/react-native-vector-icons": "^6.4.16",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "babel-jest": "^29.2.1",
