feat: created base tweet card and tests

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
   "plugins": ["react", "react-native"],
   "rules": {
     "react/react-in-jsx-scope": "off",
-    "react/display-name": "off"
+    "react/display-name": "off",
+    "@typescript-eslint/strict-boolean-expressions": "off"
   }
 }
