--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Twitter",
+  "name": "twitter",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,7 +7,7 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest --watch --verbose --coverage=false"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.11",
