--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.72.6",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
+    "react-native-svg": "^13.14.0",
     "react-native-vector-icons": "^10.0.1",
     "styled-components": "^6.1.0"
   },
@@ -46,6 +47,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^3.0.3",
+    "react-native-svg-transformer": "^1.1.0",
     "react-test-renderer": "18.2.0",
     "typescript": "*"
   },
