--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
+    "@reduxjs/toolkit": "^1.9.7",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "^2.13.4",
@@ -22,6 +23,7 @@
     "react-native-screens": "^3.27.0",
     "react-native-svg": "^13.14.0",
     "react-native-vector-icons": "^10.0.1",
+    "react-redux": "^8.1.3",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
