--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest --watch --verbose --coverage=false"
+    "test": "jest --watch --coverage=false"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.11",
