--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
   },
   "plugins": ["react", "react-native"],
   "rules": {
+    "react/prop-types": "off",
     "react/react-in-jsx-scope": "off",
     "react/display-name": "off",
     "@typescript-eslint/strict-boolean-expressions": "off"
