--- a/ios/Twitter/Info.plist
+++ b/ios/Twitter/Info.plist
@@ -62,6 +62,7 @@
 		<string>InterMedium.ttf</string>
 		<string>InterRegular.ttf</string>
 		<string>InterSemiBold.ttf</string>
+		<string>InterExtraBold.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
