--- a/ios/link-assets-manifest.json
+++ b/ios/link-assets-manifest.json
@@ -6,6 +6,10 @@
       "sha1": "47ff07c75746682133b81e7ac0537ce50a4c9916"
     },
     {
+      "path": "src/assets/fonts/InterExtraBold.ttf",
+      "sha1": "c9b3d2f2449ab2c67ff075f806973fa3d7e104b3"
+    },
+    {
       "path": "src/assets/fonts/InterMedium.ttf",
       "sha1": "e76f580811e031813e7150131a0724811cdd737a"
     },
