--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest --watch --coverage=false"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^18.6.1",
+    "@react-native-firebase/auth": "^18.6.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/material-top-tabs": "^6.6.5",
