--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,8 @@
     "react/react-in-jsx-scope": "off",
     "react/display-name": "off",
     "@typescript-eslint/strict-boolean-expressions": "off",
-    "@typescript-eslint/no-misused-promises": "off"
+    "@typescript-eslint/no-misused-promises": "off",
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/consistent-type-assertions": "off"
   }
 }
