--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.6.2",
+    "jwt-decode": "^4.0.0",
     "react": "18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "^2.13.4",
     "react-native-pager-view": "^6.2.2",
